primary goals achieved

--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -6,9 +6,9 @@
 @import 'placeholders';
 @import 'layout';
 
-@import 'flexibility/variables';
-@import 'flexibility/mixins';
-@import 'flexibility/placeholders';
+@import 'flex/variables';
+@import 'flex/mixins';
+@import 'flex/placeholders';
 
 @import 'grid/variables';
 @import 'grid/mixins';
