--- a/sass/ui/form/select/_core.scss
+++ b/sass/ui/form/select/_core.scss
@@ -1,9 +1,10 @@
 /**
- ** Drawer (.drawer)
+ ** Select (.select)
  **/
 @import '../../../core';
 
-@import '../../list/variables';
+@import '../../button/core';
 
 @import 'variables';
+@import 'placeholders';
 @import 'layout';
