--- a/sass/ui/popover/_layout.scss
+++ b/sass/ui/popover/_layout.scss
@@ -2,6 +2,7 @@
   #{$popover-class} {
     @extend %hardware-accel;
     @extend %hidden;
+    display: block;
     position: absolute;
     background: $popover-background;
     border-width: $popover-border-width;
