--- a/sass/ui/tooltip/_layout.scss
+++ b/sass/ui/tooltip/_layout.scss
@@ -2,6 +2,7 @@
   #{$tooltip-class} {
     @extend %hardware-accel;
     @extend %hidden;
+    display: block;
     position: absolute;
     background: $tooltip-background;
     border-width: $tooltip-border-width;
