webpack 2 / es6 import tree shaking

--- a/sass/ui/avatar/_layout.scss
+++ b/sass/ui/avatar/_layout.scss
@@ -4,6 +4,8 @@
     @extend %#{$flex-name}--y-center;
     @extend %#{$flex-name}--x-center;
     @extend %#{$avatar-name};
+    position:relative;
+    z-index:1;
 
     img {
       min-height: 100%;
