--- a/sass/ui/form/checkbox/_variables.scss
+++ b/sass/ui/form/checkbox/_variables.scss
@@ -3,3 +3,5 @@ $checkbox-class: ".#{$checkbox-name}" !default;
 
 $checkbox-checkmark-height: 24px !default;
 $checkbox-checkmark-width: 24px !default;
+
+$checkbox-checked-background: $blue !default;
