--- a/sass/ui/nav/navbar/_placeholders.scss
+++ b/sass/ui/nav/navbar/_placeholders.scss
@@ -3,7 +3,6 @@
     @extend %#{$flex-name};
     @extend %#{$flex-name}--self-stretch;
     @extend %#{$flex-name}--y-center;
-    @include break-for(gutters--2y);
-    @include break-for(gutters--x);
+    @include break-for(gutters);
   }
 }
