--- a/sass/ui/popover/_variables.scss
+++ b/sass/ui/popover/_variables.scss
@@ -6,6 +6,6 @@ $popover-background: $white !default;
 $popover-border-width: $border-width !default;
 $popover-border-color: $border !default;
 $popover-border-style: $border-style !default;
-$popover-border-radius: $border-radius !default;
+$popover-border-radius: 2px !default;
 
 $popover-caret-size: 12px !default;
