--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,7 +6,7 @@ $MAX-PX: 10000000px;
 // Default borders
 $border-width: 1px !default;
 $border-style: solid !default;
-$border-radius: 2px;
+$border-radius: 2px !default;
 
 
 // Responsive media queries
