--- a/sass/ui/card/_variables.scss
+++ b/sass/ui/card/_variables.scss
@@ -4,7 +4,7 @@ $card-background: $white !default;
 $card-border-width: $border-width !default;
 $card-border-style: solid !default;
 $card-border-color: $border !default;
-$card-border-radius: 2px;
+$card-border-radius: 2px !default;
 
 $card-header-background: darken($lightest-grey, 1%) !default;
 $card-header-border-width: $border-width 0 !default;
