--- a/sass/animate/_mixins.scss
+++ b/sass/animate/_mixins.scss
@@ -25,8 +25,7 @@
 
 
 @mixin fade($speed: $FAST, $easing: $EASE-IN, $delay: 0s) {
-  @include animate(visibility $speed $easing $delay,
-                   opacity $speed $easing $delay);
+  @include animate(opacity $speed $easing $delay);
 }
 
 @mixin fade-in($speed: $FAST, $delay: 0s) {
@@ -40,8 +39,7 @@
 
 
 @mixin drop($speed: $FAST, $from: top, $easing: $EASE-IN, $delay: 0s) {
-  @include animate(visibility $speed $easing $delay,
-                   opacity $speed $easing $delay,
+  @include animate(opacity $speed $easing $delay,
                    $from $speed $easing $delay);
 }
 
