--- a/sass/curls.scss
+++ b/sass/curls.scss
@@ -6,6 +6,9 @@
  ***                                                     (c) 2016 Jared Lunde *
  ***                                                                          *
  ******************************************************************************/
+$base-rem: 16px !default;
+
+
 @import 'resets/core';
 
 @import 'core';
