--- a/sass/spacing/_variables.scss
+++ b/sass/spacing/_variables.scss
@@ -4,5 +4,4 @@ $padding-class: '.#{$padding-name}' !default;
 $margin-class: '.#{$margin-name}' !default;
 
 // padding + margins
-$spacing-sizes: (0, 4px, 8px, 12px, 16px, 20px, 24px, 28px, 32px, 36px, 40px,
-                 44px, 48px) !default;
+$spacing-scale: (0, 1/4, 1/2, 1, 2, 4, 8, 16, 32) !default;
