--- a/sass/ui/nav/drawer/_layout.scss
+++ b/sass/ui/nav/drawer/_layout.scss
@@ -1,11 +1,9 @@
 @include import-once('drawer') {
   #{$drawer-class} {
-    @extend %hardware-accel;
     @extend %#{$flex-name}--y-top;
     display: block;
     position: fixed;
     top: 0;
-    left: -100%;
     bottom: 0;
     min-height: 100%;
     background: $drawer-background;
@@ -14,8 +12,9 @@
     border-style: $drawer-border-style;
     border-color: $drawer-border-color;
     overflow-y: auto;
+    @include transform(translateX(-100%));
     @include box-shadow($drawer-box-shadow);
-    @include slide($SLOW, left, ease-in-out);
+    @include slide($SLOW, ease-in-out);
   }
 
   #{mod($drawer-class, absolute)} {
@@ -23,8 +22,8 @@
   }
 
   #{mod($drawer-class, open)} {
-    left: 0;
-    @include slide($SLOW, left, ease-in-out);
+    @include transform(translateX(0));
+    @include slide($SLOW, ease-in-out);
   }
 
   #{$drawer-class} #{$list-class} {
@@ -34,51 +33,51 @@
 
   #{mod($drawer-class, top)} {
     left: 0;
-    top: -100%;
     right: 0;
+    top: 0;
     bottom: auto;
     min-width: 100%;
     min-height: initial;
     border-width: 0 0 $drawer-border-width 0;
-    @include slide($SLOW, top, ease-in-out);
+    @include transform(translateY(-100%));
+    @include slide($SLOW, ease-in-out);
   }
 
   #{mod($drawer-class, top)}#{mod($drawer-class, open)} {
-    top: 0;
-    bottom: auto;
-    @include slide($SLOW, top, ease-in-out);
+    @include transform(translateY(0));
+    @include slide($SLOW, ease-in-out);
   }
 
   #{mod($drawer-class, right)} {
     left: auto;
     top: 0;
-    right: -100%;
     bottom: 0;
+    right: 0;
     border-width: 0 0 0 $drawer-border-width;
-    @include slide($SLOW, right, ease-in-out);
+    @include transform(translateX(100%));
+    @include slide($SLOW, ease-in-out);
   }
 
   #{mod($drawer-class, right)}#{mod($drawer-class, open)} {
-    right: 0;
-    left: auto;
-    @include slide($SLOW, right, ease-in-out);
+    @include transform(translateX(0));
+    @include slide($SLOW, ease-in-out);
   }
 
   #{mod($drawer-class, bottom)} {
     left: 0;
     top: auto;
+    bottom: 0;
     right: 0;
-    bottom: -100%;
     min-height: initial;
     width: 100%;
     border-width: $drawer-border-width 0 0 0;
-    @include slide($SLOW, bottom, ease-in-out);
+    @include transform(translateY(100%));
+    @include slide($SLOW, ease-in-out);
   }
 
   #{mod($drawer-class, bottom)}#{mod($drawer-class, open)} {
-    top: auto;
-    bottom: 0;
-    @include slide($SLOW, bottom, ease-in-out);
+    @include transform(translateY(0));
+    @include slide($SLOW, ease-in-out);
   }
 
   @include extend-flex($drawer-name, $drawer-class);
