--- a/sass/ui/form/select/_layout.scss
+++ b/sass/ui/form/select/_layout.scss
@@ -3,6 +3,7 @@
     @extend %#{$flex-name};
     @extend %#{$flex-name}--y;
     position: relative;
+    @include transform(translateY(100%));
 
     select {
       display: none;
@@ -11,16 +12,15 @@
 
   #{mod($select-class, open)} {
     #{el($select-class, menu)} {
-      top: 100%;
       margin-top: -1px;
       z-index: 1000;
       opacity: 1.0;
+      @include transform(translateY(0));
       @include drop-in($FAST);
     }
   }
 
   #{el($select-class, menu)} {
-    @extend %hardware-accel;
     position: absolute;
     z-index: -1000;
     background: $select-menu-background;
@@ -37,9 +37,10 @@
              $select-menu-padding-left;
     text-align: $select-menu-text-align;
     width: $select-menu-width;
-    top: 200%;
+    top: 100%;
     opacity: 0;
     min-width: $select-menu-min-width;
+    @include transform(translateY(100%));
     @include box-shadow($select-menu-shadow);
     @include drop-out($FAST);
 
@@ -95,7 +96,6 @@
 
 
   #{el($select-class, caret)} {
-    @extend %hardware-accel;
     @extend %transform--fast;
     @extend %#{$flex-name}--self-center;
     @extend %#{$type-name}--s;
