--- a/sass/ui/tooltip/_layout.scss
+++ b/sass/ui/tooltip/_layout.scss
@@ -1,6 +1,5 @@
 @include import-once('tooltip') {
   #{$tooltip-class} {
-    @extend %hardware-accel;
     @extend %hidden;
     display: block;
     position: absolute;
@@ -23,6 +22,7 @@
   .no-touchevents #{$tooltip-class}:hover {
     @extend %visible;
     top: calc(100% + #{$tooltip-caret-size + 2px});
+    @include transform(translate(0, 0));
     @include prefix((transition-delay: 0.24s), webkit);
   }
 
@@ -43,38 +43,45 @@
 
   // Animations */
   #{mod($tooltip-class, bottom)} {
+    @include transform(translateY(100%));
     @include drop-out($VERY-FAST, $delay: 0.24s);
   }
 
   #{mod($tooltip-class, top)} {
     top: auto;
     bottom: calc(100% + #{$tooltip-caret-size + 12px});
-    @include drop-out($VERY-FAST, $from: bottom, $delay: 0.24s);
+    @include transform(translateY(-100%));
+    @include drop-out($VERY-FAST, $delay: 0.24s);
   }
 
   #{mod($tooltip-class, open)}#{mod($tooltip-class, top)},
   .no-touchevents #{mod($tooltip-class, top)}:hover {
-    @include drop-in($VERY-FAST, $from: bottom, $delay: 0.12s);
+    @include transform(translateY(0));
+    @include drop-in($VERY-FAST, $delay: 0.12s);
   }
 
   #{mod($tooltip-class, left)} {
     right: calc(100% + #{$tooltip-caret-size + 12px});
-    @include drop-out($VERY-FAST, $from: right, $delay: 0.24s);
+    @include transform(translateX(-100%));
+    @include drop-out($VERY-FAST, $delay: 0.24s);
   }
 
   #{mod($tooltip-class, open)}#{mod($tooltip-class, left)},
   .no-touchevents #{mod($tooltip-class, left)}:hover {
-    @include drop-in($VERY-FAST, $from: right, $delay: 0.12s);
+    @include transform(translateX(0));
+    @include drop-in($VERY-FAST, $delay: 0.12s);
   }
 
   #{mod($tooltip-class, right)} {
     left: calc(100% + #{$tooltip-caret-size + 12px});
-    @include drop-out($VERY-FAST, $from: left, $delay: 0.24s);
+    @include transform(translateX(100%));
+    @include drop-out($VERY-FAST, $delay: 0.24s);
   }
 
   #{mod($tooltip-class, open)}#{mod($tooltip-class, right)},
   .no-touchevents #{mod($tooltip-class, right)}:hover {
-    @include drop-in($VERY-FAST, $from: left, $delay: 0.12s);
+    @include transform(translateX(0));
+    @include drop-in($VERY-FAST, $delay: 0.12s);
   }
 
 
