--- a/sass/ui/nav/drawer/_layout.scss
+++ b/sass/ui/nav/drawer/_layout.scss
@@ -5,6 +5,7 @@
     position: fixed;
     top: 0;
     bottom: 0;
+    left: 0;
     min-height: 100%;
     background: $drawer-background;
     z-index: $MAX-Z-INDEX;
